--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask_Uploads
-Flask_RESTful
-numpy==1.18.0
-Flask_Cors
-Flask_JWT_Extended
-Flask
-opencv_python==4.1.2.30
-
+Flask==2.2.3
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.4.4
+Flask-Mail==0.9.0
+flask-marshmallow==0.14.0
+Flask-RESTful==0.3.9
+Flask-Uploads==0.2.1
+scikit-learn: 1.0.2
